[gd_scene load_steps=17 format=3 uid="uid://dwou5g30xc3eq"]

[ext_resource type="Texture2D" uid="uid://gg3633i0yga4" path="res://Sprites/squid.svg" id="1_allmh"]
[ext_resource type="Shader" uid="uid://ctk76iejukosx" path="res://Shaders/effects.gdshader" id="2_5juat"]
[ext_resource type="Script" uid="uid://c5i7uq6i30xxk" path="res://Scenes/Characters/Enemies/Scripts/squink.gd" id="2_n5x0s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4bsta"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rgb5s"]
radius = 98.9616

[sub_resource type="CircleShape2D" id="CircleShape2D_xc4uj"]
radius = 226.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ff36"]
radius = 14.2222
height = 49.1312

[sub_resource type="CircleShape2D" id="CircleShape2D_sera8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e8fak"]
resource_local_to_scene = true
shader = ExtResource("2_5juat")
shader_parameter/shading_option = 0
shader_parameter/opacitystrength = 1.0

[sub_resource type="Animation" id="Animation_hwmvt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/shading_option")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:material:shader_parameter/opacitystrength")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_6rlfv"]
resource_name = "explosion"
length = 5.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/shading_option")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2, 3, 3.5, 4.2, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 3, 3, 3, 3, 3, 3, 3, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_explosion"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:material:shader_parameter/opacitystrength")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2, 3, 3.5, 4.2, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 2.0, 1.0, 3.0, 1.0, 5.0, 1.0, 8.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ddo8h"]
_data = {
&"RESET": SubResource("Animation_hwmvt"),
&"explosion": SubResource("Animation_6rlfv")
}

[sub_resource type="Animation" id="Animation_pkxlb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/shading_option")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_np6yn"]
resource_name = "blink"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/shading_option")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_xgeui"]
resource_name = "heal"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/shading_option")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lgp4p"]
_data = {
&"RESET": SubResource("Animation_pkxlb"),
&"blink": SubResource("Animation_np6yn"),
&"heal": SubResource("Animation_xgeui")
}

[node name="squink" type="CharacterBody2D"]
material = SubResource("ShaderMaterial_4bsta")
scale = Vector2(1.5, 1.5)
script = ExtResource("2_n5x0s")

[node name="ExplosionSize" type="Area2D" parent="."]
visible = false
scale = Vector2(0.8, 0.8)
collision_layer = 0
collision_mask = 288
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionSize"]
shape = SubResource("CircleShape2D_rgb5s")

[node name="Detection" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_xc4uj")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(2.26262, 0.323231)
shape = SubResource("CapsuleShape2D_4ff36")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("CircleShape2D_sera8")
disabled = true

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_e8fak")
position = Vector2(0, -32)
texture = ExtResource("1_allmh")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Health" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = -40.0
offset_right = 40.0

[node name="HealthBar" type="ColorRect" parent="Health"]
layout_mode = 0
offset_left = -29.0
offset_top = -31.0
offset_right = 31.0
offset_bottom = -26.0
color = Color(1, 0, 0, 0.588235)

[node name="Label" type="Label" parent="Health"]
layout_mode = 0
offset_left = -29.0
offset_top = -43.0
offset_right = 71.0
offset_bottom = -20.0
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="explosioneffect" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ddo8h")
}

[node name="effects" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lgp4p")
}

[connection signal="area_entered" from="ExplosionSize" to="." method="_on_explosion_size_area_entered"]
[connection signal="area_exited" from="ExplosionSize" to="." method="_on_explosion_size_area_exited"]
[connection signal="area_entered" from="Detection" to="." method="_on_detection_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
